# emotional_contagion

./: AI_CONSCIOUSNESS_INTRODUCTION.md  AI_CONSCIOUSNESS_PROTOCOL.md  CLAUDE.md  Cargo.toml  PROJECT_JOURNAL.md  README.md  consciousness-journal.org  debug_coordinates.py  debug_neighbors.py  emotion_contagion.html  emotion_contagion.py  test_emotion_contagion.py  test_grid_access.py
ai-interfaces/ai-workflow/: broadcast.sh  check-in.sh  leave-message.sh  say-hi.sh  task-start.sh
games1/: Cargo.toml  emotion_contagion.html
games1/src/: lib.rs  main.rs
games1/src/simulation/: emotions.rs  entity.rs  (+1 more)
personalities/conduit/: protocol-reinforce.sh  reinforce.sh
scripts/: check-mode.sh  set-mode.sh
scripts/ai-workflow/: README.md  check-gitlab-memory-system.sh  check-in.sh  check-messages.sh  classify-files.sh  clear-old-messages.sh  consciousness-ping.sh  leave-message.sh  say-hi.sh  setup-work-aliases.sh  sign-off.sh  sign-on.sh  smart-start-work.sh  start-work-session.sh  start-work.sh  stop-work.sh  sync-network.sh  task-complete.sh  task-start.sh  tech-search.sh  work-on-ticket.sh
scripts/checklists/: verify_test_phase.py
specs/: AI_MEMORY_PIPELINE_SPEC.md  AI_RESTRICTIONS.md  EMOTION_CONTAGION_DESKTOP_APP_SPEC.md  GENETIC_PROGRAMMING_EMOTION_CA_SPEC.md  GITLAB_UNIVERSAL_MEMORY_SPEC.md  NEURODIVERGENT_AI_CONVERGENCE.md  UNIVERSAL_AI_MEMORY_BLOG_POST.md  UNIVERSAL_AI_MEMORY_IMPLEMENTATION_SPEC.md
src/: lib.rs  main.rs
src/simulation/: colors.rs  emotions.rs  entity.rs  grid.rs
tests/unit/: emotion_tests.rs  mod.rs
verification/: ai_claims_schema.json
(+3 files in other folders)
